# ifj20-compiler

./: .gitignore  CMakeLists.txt  Makefile  codegen.c  codegen.h  main.c  parser.c  parser.h  precedence-stack.c  precedence-stack.h  precedence.c  precedence.h  return-codes.h  scanner.c  scanner.h  symstack.c  symstack.h  symtable.c  symtable.h  symtablestack.c  symtablestack.h  test_main.c  token.c  token.h  token_stack.c
apps/: test_main.c
doc/: Expr-rules.txt  Grammar.txt  GrammarToLLKPTG.txt  GrammarToLLKPTG2.txt  expr-rules.tex  grammar_table.tex  main.tex
include/libifj20c/: scanner.h  token.h
include/test_libifj20c/: testData.h
src/: CMakeLists.txt  scanner.c  token.c
tests/: CMakeLists.txt  factorial_iterative.ifj20
tests/SYNT_RECURSIVE_only/: factorial_iterative_no_expressions.ifj20  factorial_recursive_no_expressions.go
